columns spacing fix

--- a/assets/css/blocks/columns.scss
+++ b/assets/css/blocks/columns.scss
@@ -40,5 +40,6 @@
 	> .wp-block-column {
 		border-left: 1rem solid transparent;
 		border-right: 1rem solid transparent;
+		box-sizing: content-box;
 	}
 }
